--- a/options/train/EDVR/train_id_loss.yml
+++ b/options/train/EDVR/train_id_loss.yml
@@ -1,5 +1,5 @@
 # name: test
-name: skyline_trans_id_loss_7x7_mse_ijb
+name: skyline_trans_id_loss_7x7_mse_lm_b4
 model_type: EDVRModel
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -21,13 +21,24 @@ datasets:
   train:
     name: VOX
     type: Vimeo90KDataset
-    dataroot_gt: /data2/wei/vox-160-clean/GT
-    dataroot_lq: /data2/wei/vox-160-clean/LR
+    dataroot_gt: /data2/wei/vox-lm/GT
+    dataroot_lq: /data2/wei/vox-lm/LR
     dataroot_flow: ~
-    meta_info_file: basicsr/data/meta_info/vox_ijb_train.txt  #############dododo
+    meta_info_file: basicsr/data/meta_info/vox_lm_train.txt  #############dododo
     val_partition: Vimeo90KDateset # set to 'official' when use the official validation partition
     io_backend:
       type: disk
+# datasets:
+#   train:
+#     name: VOX
+#     type: Vimeo90KDataset
+#     dataroot_gt: /data2/wei/vox-160-clean/GT
+#     dataroot_lq: /data2/wei/vox-160-clean/LR
+#     dataroot_flow: ~
+#     meta_info_file: basicsr/data/meta_info/vox_ijb_train.txt  #############dododo
+#     val_partition: Vimeo90KDateset # set to 'official' when use the official validation partition
+#     io_backend:
+#       type: disk
 
     num_frame: 7
     gt_size: 160
@@ -39,7 +50,7 @@ datasets:
     # data loader
     use_shuffle: true
     num_worker_per_gpu: 4
-    batch_size_per_gpu: 1
+    batch_size_per_gpu: 4
     dataset_enlarge_ratio: 200
     prefetch_mode: ~
 
