--- a/options/test/EDVR/test_160_ijb.yml
+++ b/options/test/EDVR/test_160_ijb.yml
@@ -1,4 +1,4 @@
-name: skyline_trans_id_loss_7x7_mse_lm_1100_ijb_b16_4000_vis
+name: skyline_trans_id_loss_7x7_mse_lm_2400_ijb_b16_8w
 model_type: EDVRModel
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -45,7 +45,7 @@ path:
   #pretrain_model_g: experiments/train_320_wo_off/models/net_g_175000.pth
   #pretrain_model_g: experiments/train_320_w_off_100/models/net_g_195000.pth
   #pretrain_model_g: experiments/train_320_w_off/models/net_g_110000.pth
-  pretrain_model_g: experiments/skyline_trans_id_loss_7x7_mse_lm_1100_ijb_b16/models/net_g_40000.pth
+  pretrain_model_g: experiments/skyline_trans_id_loss_7x7_mse_lm_2400_ijb_b16/models/net_g_80000.pth
   strict_load: true
 # experiments/train_3d/models/net_g_280000.pth
 # experiments/train_3d/models/net_g_150000.pth
@@ -53,7 +53,7 @@ path:
 # experiments/train_3d_160_out/models/net_g_140000.pth    将160大小图片加在concat
 # validation settings
 val:
-  save_img: true
+  save_img: yes
   suffix: ~  # add suffix to saved images, if None, use exp name
 
   metrics:
