--- a/options/train/EDVR/train_id_loss.yml
+++ b/options/train/EDVR/train_id_loss.yml
@@ -1,5 +1,5 @@
 # name: test
-name: test_t
+name: train_edvr_id
 model_type: EDVRModel
 scale: 4
 num_gpu: 1  # set num_gpu: 0 for cpu mode
@@ -50,7 +50,7 @@ datasets:
     # data loader
     use_shuffle: true
     num_worker_per_gpu: 4
-    batch_size_per_gpu: 16
+    batch_size_per_gpu: 8
     dataset_enlarge_ratio: 200
     prefetch_mode: ~
 
